--- a/pom.xml
+++ b/pom.xml
@@ -38,4 +38,12 @@
     </pluginRepository>
   </pluginRepositories>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.xmlrpc</groupId>
+      <artifactId>xmlrpc-client</artifactId>
+      <version>3.1.3</version>
+    </dependency>
+  </dependencies>
+
 </project>
