--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
       <artifactId>xmlrpc-client</artifactId>
       <version>3.1.3</version>
     </dependency>
+
+      <!-- for debugging purposes of XMLRPC -->
+      <dependency>
+        <groupId>commons-httpclient</groupId>
+        <artifactId>commons-httpclient</artifactId>
+        <version>3.1</version>
+      </dependency>
   </dependencies>
 
-</project>
+ </project>
