--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
           <artifactId>commons-codec</artifactId>
           <version>1.6</version>
       </dependency>
+
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+          <version>1.7.4</version>
+      </dependency>
   </dependencies>
 
  </project>
