--- a/pom.xml
+++ b/pom.xml
@@ -59,8 +59,20 @@
       </dependency>
 
       <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>2.4</version>
+      </dependency>
+
+      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
+          <version>1.7.4</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
           <version>1.7.4</version>
       </dependency>
   </dependencies>
