--- a/pom.xml
+++ b/pom.xml
@@ -46,23 +46,23 @@
     </dependency>
 
       <!-- for debugging purposes of XMLRPC -->
-      <dependency>
-        <groupId>commons-httpclient</groupId>
-        <artifactId>commons-httpclient</artifactId>
-        <version>3.1</version>
-      </dependency>
+      <!--<dependency>-->
+        <!--<groupId>commons-httpclient</groupId>-->
+        <!--<artifactId>commons-httpclient</artifactId>-->
+        <!--<version>3.1</version>-->
+      <!--</dependency>-->
 
-      <dependency>
-          <groupId>commons-codec</groupId>
-          <artifactId>commons-codec</artifactId>
-          <version>1.6</version>
-      </dependency>
+      <!--<dependency>-->
+          <!--<groupId>commons-codec</groupId>-->
+          <!--<artifactId>commons-codec</artifactId>-->
+          <!--<version>1.6</version>-->
+      <!--</dependency>-->
 
-      <dependency>
-          <groupId>commons-io</groupId>
-          <artifactId>commons-io</artifactId>
-          <version>2.4</version>
-      </dependency>
+      <!--<dependency>-->
+          <!--<groupId>commons-io</groupId>-->
+          <!--<artifactId>commons-io</artifactId>-->
+          <!--<version>2.4</version>-->
+      <!--</dependency>-->
 
       <dependency>
         <groupId>org.slf4j</groupId>
