--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
     <version>1.554.1</version><!-- which version of Jenkins is this plugin built against? -->
   </parent>
 
-  <artifactId>koji</artifactId>
-  <version>0.2-SNAPSHOT</version>
+  <artifactId>koji-plugin</artifactId>
+  <version>0.1.3-SNAPSHOT</version>
   <packaging>hpi</packaging>
   <name>Koji plugin</name>
   <description>Integrates Koji build system with Jenkins</description>
@@ -23,9 +23,9 @@
   </developers>
 
   <scm>
-    <connection>scm:git:git://github.com/vtunka/jenkins-koji-plugin.git</connection>
-    <developerConnection>scm:git:git@github.com:vtunka/jenkins-koji-plugin.git</developerConnection>
-    <url>https://github.com/vtunka/jenkins-koji-plugin</url>
+    <connection>scm:git:git://github.com/jenkinsci/koji-plugin.git</connection>
+    <developerConnection>scm:git:git@github.com:jenkinsci/koji-plugin.git</developerConnection>
+    <url>https://github.com/jenkinsci/koji-plugin</url>
     <tag>HEAD</tag>
   </scm>
 
@@ -50,25 +50,6 @@
       <artifactId>xmlrpc-client</artifactId>
       <version>3.1.3</version>
     </dependency>
-
-      <!-- for debugging purposes of XMLRPC -->
-      <!--<dependency>-->
-        <!--<groupId>commons-httpclient</groupId>-->
-        <!--<artifactId>commons-httpclient</artifactId>-->
-        <!--<version>3.1</version>-->
-      <!--</dependency>-->
-
-      <!--<dependency>-->
-          <!--<groupId>commons-codec</groupId>-->
-          <!--<artifactId>commons-codec</artifactId>-->
-          <!--<version>1.6</version>-->
-      <!--</dependency>-->
-
-      <!--<dependency>-->
-          <!--<groupId>commons-io</groupId>-->
-          <!--<artifactId>commons-io</artifactId>-->
-          <!--<version>2.4</version>-->
-      <!--</dependency>-->
 
       <dependency>
         <groupId>org.slf4j</groupId>
